# OpenMapsApi

./: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml  tailwind.config.js
.conf/: nginx.conf
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-188e48f31a754dd01888d2d921b9de52ae900a7355c6b1c7fcd710293b3a0fa1.json
backend/src/: api.rs  database.rs  logging.rs  main.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/.conf/: nginx.conf
frontend/src/: app.rs  components.rs  main.rs  tailwind.css
frontend/src/components/: control.rs  footer.rs  header.rs  map_component.rs  mod.rs  navbar.rs
frontend/src/leaflet_yew/: map_container.rs  mod.rs  navigation_component.rs  tile_component.rs
frontend/src/pages/: docs.rs  home.rs  mod.rs
nginx/: Dockerfile  nginx.conf.template
regions/: northern-zone-latest.osm.pbf
renderer/: Dockerfile  Dockerfile.railway
router/: Dockerfile
