[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Chirag Singla <chirag.singla.pi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread"]}
poem = { git = "https://github.com/chirag-droid/poem.git" }
poem-openapi = { git = "https://github.com/chirag-droid/poem.git", features = ["rapidoc"] }
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
dotenvy = "0.15.7"
