[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Chirag Singla <chirag.singla.pi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"]}
implicit-clone = "0.4.8"
leaflet = "0.4.0"
wasm-bindgen = "0.2.89"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]