[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Chirag Singla <chirag.singla.pi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.2.0"
js-sys = "0.3.67"
leaflet = "0.4.0"
log = "0.4.20"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.89"
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.66"
features = ["Element"]
